k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meeme-app
  labels:
    app: meeme-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meeme-app
  template: 
    metadata:
      labels:
        app: meeme-app
    spec:
      containers:
        - name: meeme-app-container
          image: registry.digitalocean.com/meeme-app/meeme-app:merged
          ports:
            - containerPort: 3000
